fixing the colors and spacing

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -7,7 +7,7 @@ $body-color: #1c1d36;
 $primary: #f89406;
 $blue: #133978;
 $secondary: #133978;
-$info: #f4f4f3;
+$info: #eaccf0;
 
 $theme-colors: (
     "primary": $primary,
